--- a/application-prod.yml
+++ b/application-prod.yml
@@ -1,46 +1,14 @@
 
-spring.application.name: config-server
-
-server:
-  port: 8888
-
 spring:
-  application:
-    name: config-server
-  cloud:
-    config:
-      server:
-        git:
-          uri: https://github.com/MADI1289/config-repo
-          clone-on-start: true
-
-eureka:
-  client:
-    register-with-eureka: false
-    fetch-registry: false
-  instance:
-    hostname: localhost
-
-
-
-logging:
-  level:
-    "com.netflix": WARN
-    "org.springframework": INFO
-
-# Actuator endpoints for monitoring (optional)
-management:
-  endpoints:
-    web:
-      exposure:
-        include: "*"
-        spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/semana3
+    url: jdbc:mysql://localhost:3307/semana3
     username: root
     password: 1289
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
-    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
     hibernate:
       ddl-auto: update
+    show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL5Dialect
