--- a/application.yml
+++ b/application.yml
@@ -1,6 +1,3 @@
-
-spring.application.name: config-server
-
 server:
   port: 8888
 
@@ -11,28 +8,8 @@ spring:
     config:
       server:
         git:
-          uri: https://github.com/MADI1289/api-morty-dj
+          uri: https://github.com/MADI1289/config-repo
           clone-on-start: true
-
-eureka:
-  client:
-    register-with-eureka: false
-    fetch-registry: false
-  instance:
-    hostname: localhost
-
-logging:
-  level:
-    "com.netflix": WARN
-    "org.springframework": INFO
-
-# Actuator endpoints for monitoring (optional)
-management:
-  endpoints:
-    web:
-      exposure:
-        include: "*"
-        spring:
   datasource:
     url: jdbc:mysql://localhost:3306/semana3
     username: root
@@ -42,3 +19,23 @@ management:
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
     hibernate:
       ddl-auto: update
+
+eureka:
+  client:
+    register-with-eureka: false
+    fetch-registry: false
+  instance:
+    hostname: localhost
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+
+logging:
+  level:
+    root: INFO
+    org.springframework.web: DEBUG
+    org.springframework.cloud.config.server: DEBUG
+    org.eclipse.jgit: DEBUG
